<resources>
<!--    <string name="app_name">Restaurant Information Service</string>-->
    <string name="app_name">QUICK EAT</string>
    <string name="logo_quick">QUICK</string>
    <string name="logo_eat">EAT</string>

    <!-- main bottom navigation view -->
    <string name="home">홈</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="history">히스토리</string>
    <string name="setting">설정</string>

    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="id_and_email">아이디(이메일)</string>
    <string name="at_sign">\@</string>
    <string name="password">패스워드</string>
    <string name="direct_input">직접입력</string>

    <string name="store_name">가게 이름</string>
    <string name="title">QUICK EAT</string>
    <string name="description">choose mode</string>
    <string name="welcome">Welcome!</string>
    <string name="signup">회원가입</string>
    <string name="divider">|</string>

    <!-- shopkeeper navigation view menu -->
    <string name="menu_register">등록하기</string>
    <string name="menu_edit">수정하기</string>
    <string name="menu_email">이메일 확인</string>
    <string name="menu_event">이벤트 등록</string>
    <string name="menu_ask">문의하기</string>
    <string name="menu_version">버전 정보: 1.0</string>

    <!-- shopkeeper -->
    <string name="shop_name">가게 이름</string>
    <string name="shop_introduction">가게 소개</string>
    <string name="shopkeeper_open_close">오픈 여부</string>
    <string name="shopkeeper_total_table_count">전체 테이블 개수</string>
    <string name="shopkeeper_available_table_count">이용 가능한 테이블 수:</string>
    <string name="count">0</string>
    <string name="shopkeeper_table_type">1인 테이블</string>

    <string name="review_header">내가 작성한 리뷰</string>
    <string name="review">리뷰</string>
    <string name="register_shop">Register Shop</string>
    <string name="table_type_count">테이블 유형 개수</string>
    <string name="check">확인</string>
    <string name="register">등록하기</string>
    <string name="edit">내 정보 수정</string>
    <string name="logout">로그아웃</string>

    <!-- customer / setting -->
    <string name="setting_logout">로그아웃</string>
    <string name="setting_edit">내 정보 수정</string>
    <string name="setting_review">리뷰 남기기</string>
    <string name="setting_ask">문의하기</string>
    <string name="setting_version">버전 정보: 1.00</string>
    <string name="shopkeeper_get_location">위치 받아오기</string>

    <!-- history -->
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="number_of_reviews">0</string>
    <string name="shopkeeper_percentage_title">현재 사용 중인 테이블 수/전체 테이블 수</string>
    <string name="shopkeeper_percentage">0%</string>
    <string name="table_type_2">2인 테이블 개수</string>
    <string name="table_type_4">4인 테이블 개수</string>
    <string name="upload">업로드</string>
    <string name="customer">Customer</string>
    <string name="shopkeeper">Shopkeeper</string>
    <string name="date">날짜</string>
    <string name="customer_review">사용자 리뷰</string>
    <string name="cause">등록 전에 업로드 버튼을 눌러주세요.</string>

</resources>